--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
 
     //noinspection GradleCompatible
     implementation('com.amazonaws:aws-android-sdk-auth-ui:2.6.+@aar') { transitive = true }
+
+    // DB initializing
+    implementation 'com.amazonaws:aws-android-sdk-ddb-mapper:2.6.+'
 }
