Retrieves note list
Retrieves note list from DB and displays it using RecyclerView. Multi-threading.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddNewNote"></activity>
+        <activity android:name=".AddNewNote" />
+        <activity
+            android:name=".List"
+            android:label="@string/title_activity_list"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
