--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,8 @@
         </activity>
         <activity android:name=".AddNewNote" />
         <activity
-            android:name=".List"
-            android:label="@string/title_activity_list"
+            android:name=".RetrieveNote"
+            android:label="@string/title_activity_retrieve_note"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
