Added some S3 upload code

--- a/app/src/main/res/raw/awsconfiguration.json
+++ b/app/src/main/res/raw/awsconfiguration.json
@@ -4,23 +4,48 @@
   "CredentialsProvider": {
     "CognitoIdentity": {
       "Default": {
-        "PoolId": " ",
-        "Region": " "
+        "PoolId": "us-east-1:e649b19c-08e4-4fa3-a9a6-dfab6639ca48",
+        "Region": "us-east-1"
       }
     }
   },
   "IdentityManager": {
     "Default": {}
   },
+  "CognitoUserPool": {
+    "Default": {
+      "PoolId": "us-east-1_fCWJK325F",
+      "AppClientId": "27s31f0kob4qj0un1hsiq214o4",
+      "AppClientSecret": "3lnuqh8n3h584k6i0bjmv1p8qhnt6ccs06bifbefe8cqv3cjsak",
+      "Region": "us-east-1"
+    }
+  },
+  "S3TransferUtility": {
+    "Default": {
+      "Bucket": "noteorganizer-userfiles-mobilehub-923302063",
+      "Region": "us-east-1"
+    }
+  },
+  "DynamoDBObjectMapper": {
+    "Default": {
+      "Region": "us-east-1"
+    }
+  },
   "PinpointAnalytics": {
     "Default": {
-      "AppId": " ",
-      "Region": " "
+      "AppId": "ded544ae394c40899c1c82f735a88524",
+      "Region": "us-east-1"
     }
   },
   "PinpointTargeting": {
     "Default": {
-      "Region": " "
+      "Region": "us-east-1"
+    }
+  },
+  "UserFileManager": {
+    "Default": {
+      "Bucket": "noteorganizer-userfiles-mobilehub-923302063",
+      "Region": "us-east-1"
     }
   }
 }
